--- a/assets/sass/01-content.scss
+++ b/assets/sass/01-content.scss
@@ -15,7 +15,7 @@
 $color-background 	: #061C30;
 $color-text			: #848d96;
 $color-link			: #848d96;
-$color-link-hover	: #CA486d; 
+$color-link-hover	: #FFC20A; 
 $color-name			: #47bec7; 
 $color-tagline		: #CCCCCC; 
 
@@ -25,7 +25,7 @@ $bp-tablet 			: 800px;
 $bp-mobile 			: 500px;
 
 // Images
-$image-background	: url('../../images/background.jpg');
+$image-background	: url('../../images/background2.jpg');
 
 //-------------------------------------------------------------------------------
 // Fade In
